--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,74 @@
     <artifactId>thymeleaf-querystring</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <description>Thymeleaf dialect for manipulating query strings with spring mvc helpers</description>
 
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <properties>
+        <maven.compile.source>1.8</maven.compile.source>
+        <maven.compile.target>1.8</maven.compile.target>
+        <thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <!--<overview>${basedir}/src/main/javadoc/overview.html</overview>-->
+                    <!--<javadocDirectory>${basedir}/src/main/javadoc</javadocDirectory>-->
+                    <outputDirectory>${project.build.directory}/apidocs</outputDirectory>
+                    <!--<sourceFileIncludes>-->
+                        <!--<include>QueryStringHelper.java</include>-->
+                    <!--</sourceFileIncludes>-->
+
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>${thymeleaf.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.9.1</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 </project>
