--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <maven.compile.source>1.8</maven.compile.source>
         <maven.compile.target>1.8</maven.compile.target>
         <thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <build>
@@ -77,5 +78,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
