--- a/pom.xml
+++ b/pom.xml
@@ -29,26 +29,8 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <!--<overview>${basedir}/src/main/javadoc/overview.html</overview>-->
-                    <!--<javadocDirectory>${basedir}/src/main/javadoc</javadocDirectory>-->
-                    <outputDirectory>${project.build.directory}/apidocs</outputDirectory>
-                    <!--<sourceFileIncludes>-->
-                        <!--<include>QueryStringHelper.java</include>-->
-                    <!--</sourceFileIncludes>-->
-
-                </configuration>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -58,6 +40,38 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>${maven.compile.source}</source>
+                    <target>${maven.compile.target}</target>
+                </configuration>
+            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-javadoc-plugin</artifactId>-->
+                <!--<version>3.0.0</version>-->
+                <!--<configuration>-->
+                    <!--&lt;!&ndash;<overview>${basedir}/src/main/javadoc/overview.html</overview>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<javadocDirectory>${basedir}/src/main/javadoc</javadocDirectory>&ndash;&gt;-->
+                    <!--<outputDirectory>${project.build.directory}/apidocs</outputDirectory>-->
+                    <!--&lt;!&ndash;<sourceFileIncludes>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<include>QueryStringHelper.java</include>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</sourceFileIncludes>&ndash;&gt;-->
+
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>jar</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
     <packaging>jar</packaging>
